--- a/main-page.html
+++ b/main-page.html
@@ -3,7 +3,7 @@
     <head>
         <title>Be polyte</title>
     </head>
-    <body>
+    <body style="background-color: blue;">
         <p>Plz</p>
     </body>
 </html>
